src/objects/Pre_Admission_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>ADD_ADHD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADD/ADHD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Abdomen_Cramps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abdomen Cramps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Absenteeism__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absenteeism</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ages_of_Children__c</fullName>
        <label>Ages of Children</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Air_Travel_Details__c</fullName>
        <label>Air Travel Details (Where &amp; When)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Air_travel_in_last_two_weeks__c</fullName>
        <label>Air travel in last two weeks?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Air_travel_in_the_past_two_weeks__c</fullName>
        <label>Air travel in the past two weeks?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amphetamines_Age_of_First_Use__c</fullName>
        <label>Amphetamines Age of First Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amphetamines_Amount_Commonly_Used__c</fullName>
        <label>Amphetamines Amount Commonly Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amphetamines_Comment_Details__c</fullName>
        <label>Amphetamines Comment/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amphetamines_Date_of_Last_Use__c</fullName>
        <label>Amphetamines Date of Last Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amphetamines_Details__c</fullName>
        <label>Amphetamines Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug of Choice</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amphetamines_Duration__c</fullName>
        <label>Amphetamines Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than a month</fullName>
                </value>
                <value>
                    <fullName>less than 3 months</fullName>
                </value>
                <value>
                    <fullName>less than 6 months</fullName>
                </value>
                <value>
                    <fullName>less than a year</fullName>
                </value>
                <value>
                    <fullName>more than a year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amphetamines_How_Often__c</fullName>
        <label>Amphetamines How Often</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>1x per week</fullName>
                </value>
                <value>
                    <fullName>2x per week</fullName>
                </value>
                <value>
                    <fullName>3x per week</fullName>
                </value>
                <value>
                    <fullName>4x per week</fullName>
                </value>
                <value>
                    <fullName>1x per month or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amphetamines_Route__c</fullName>
        <label>Amphetamines Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Nasal</fullName>
                </value>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anxiety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anxiety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_history_of_an_eating_disorder_30days__c</fullName>
        <label>Any history of an eating disorder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_history_of_an_eating_disorder_InLife__c</fullName>
        <label>Any history of an eating disorder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_problems_with_group_participation__c</fullName>
        <label>Comfortable undergoing group treatment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>no</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_meds_you_are_non_compliant__c</fullName>
        <label>Are there meds you are non-compliant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_currently_experiencing_pain__c</fullName>
        <label>Are you currently experiencing pain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_expected_back_at_work_post_tx__c</fullName>
        <label>Are you expected back at work post-tx?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_pregnant__c</fullName>
        <label>Are you pregnant?</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Are_you_suppose_to_take_any_medications__c</fullName>
        <inlineHelpText>Are there any meditations that you are supposed to be taking but are not? If yes, please list and describe:</inlineHelpText>
        <label>Are you suppose to take any medications?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_taking_prescribed_medication__c</fullName>
        <label>Are you taking prescribed medication?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Around_someone_dx_with_covid_19__c</fullName>
        <label>Around someone dx with covid-19?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Around_someone_suspected_with_Covid19__c</fullName>
        <inlineHelpText>Have you had contact with anyone who is suspected to have Covid19?</inlineHelpText>
        <label>Around someone suspected with Covid19?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barbiturates_Age_of_First_Use__c</fullName>
        <label>Barbiturates Age of First Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Barbiturates_Amount_Commonly_Used__c</fullName>
        <label>Barbiturates Amount Commonly Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barbiturates_Comment_Details__c</fullName>
        <label>Barbiturates Comment/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Barbiturates_Details__c</fullName>
        <label>Barbiturates Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug of Choice</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barbiturates_Duration__c</fullName>
        <label>Barbiturates Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than a month</fullName>
                </value>
                <value>
                    <fullName>less than 3 months</fullName>
                </value>
                <value>
                    <fullName>less than 6 months</fullName>
                </value>
                <value>
                    <fullName>less than a year</fullName>
                </value>
                <value>
                    <fullName>more than a year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barbiturates_How_Often__c</fullName>
        <label>Barbiturates How Often</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>1x per week</fullName>
                </value>
                <value>
                    <fullName>2x per week</fullName>
                </value>
                <value>
                    <fullName>3x per week</fullName>
                </value>
                <value>
                    <fullName>4x per week</fullName>
                </value>
                <value>
                    <fullName>1x per month or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barbiturates_Last_Used__c</fullName>
        <label>Barbiturates Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Barbiturates_Route__c</fullName>
        <label>Barbiturates Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Nasal</fullName>
                </value>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Been_tested_for_covid19__c</fullName>
        <label>Been tested for covid19?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Beer_Age_of_First_Use__c</fullName>
        <label>Beer Age of First Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beer_Amount_Commonly_Used__c</fullName>
        <label>Beer Amount Commonly Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beer_Comment_Details__c</fullName>
        <label>Beer Comment/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Beer_Details__c</fullName>
        <label>Beer Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug of Choice</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Patient denies</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Beer_Duration__c</fullName>
        <label>Beer Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than a month</fullName>
                </value>
                <value>
                    <fullName>less than 3 months</fullName>
                </value>
                <value>
                    <fullName>less than 6 months</fullName>
                </value>
                <value>
                    <fullName>less than a year</fullName>
                </value>
                <value>
                    <fullName>more than a year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Beer_How_Often__c</fullName>
        <label>Beer How Often</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>1x per week</fullName>
                </value>
                <value>
                    <fullName>2x per week</fullName>
                </value>
                <value>
                    <fullName>3x per week</fullName>
                </value>
                <value>
                    <fullName>4x per week</fullName>
                </value>
                <value>
                    <fullName>1x per month or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Beer_Route__c</fullName>
        <label>Beer Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Nasal</fullName>
                </value>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Beer_last_used__c</fullName>
        <label>Beer last used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Behind_on_Bills__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behind on Bills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Age_of_First_Use__c</fullName>
        <label>Benzodiazepines Age of First Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Amount_Commonly_Used__c</fullName>
        <label>Benzodiazepines Amount Commonly Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Comment_Details__c</fullName>
        <label>Benzodiazepines Comment/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Details__c</fullName>
        <label>Benzodiazepines Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug of Choice</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Patient denies</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Duration__c</fullName>
        <label>Benzodiazepines Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than one month</fullName>
                </value>
                <value>
                    <fullName>less than 3 months</fullName>
                </value>
                <value>
                    <fullName>less than 6 months</fullName>
                </value>
                <value>
                    <fullName>less than a year</fullName>
                </value>
                <value>
                    <fullName>more than a year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benzodiazepines_How_Often__c</fullName>
        <label>Benzodiazepines How Often</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>1x per week</fullName>
                </value>
                <value>
                    <fullName>2x per week</fullName>
                </value>
                <value>
                    <fullName>3x per week</fullName>
                </value>
                <value>
                    <fullName>4x per week</fullName>
                </value>
                <value>
                    <fullName>1x per month or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Last_Used__c</fullName>
        <label>Benzodiazepines Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Route__c</fullName>
        <label>Benzodiazepines Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Nasal</fullName>
                </value>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bipolar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bipolar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blackout_Details__c</fullName>
        <label>Blackout Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blackouts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blackouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_Aches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Body Aches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cannabis_Age_of_First_Use__c</fullName>
        <label>Cannabis Age of First Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cannabis_Amount_Commonly_Used__c</fullName>
        <label>Cannabis Amount Commonly Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cannabis_Comment_Details__c</fullName>
        <label>Cannabis Comment/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cannabis_Date_of_Last_Use__c</fullName>
        <label>Cannabis Date of Last Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cannabis_Details__c</fullName>
        <label>Cannabis Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug of Choice</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cannabis_Duration__c</fullName>
        <label>Cannabis Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than a month</fullName>
                </value>
                <value>
                    <fullName>less than 3 months</fullName>
                </value>
                <value>
                    <fullName>less than 6 months</fullName>
                </value>
                <value>
                    <fullName>less than a year</fullName>
                </value>
                <value>
                    <fullName>more than a year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cannabis_How_Often__c</fullName>
        <label>Cannabis How Often</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>1x per week</fullName>
                </value>
                <value>
                    <fullName>2x per week</fullName>
                </value>
                <value>
                    <fullName>3x per week</fullName>
                </value>
                <value>
                    <fullName>4x per week</fullName>
                </value>
                <value>
                    <fullName>1x per month or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cannabis_Route__c</fullName>
        <label>Cannabis Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Nasal</fullName>
                </value>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cocaine_Crack_Age_of_First_Use__c</fullName>
        <label>Cocaine/Crack Age of First Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cocaine_Crack_Amount_Commonly_Used__c</fullName>
        <label>Cocaine/Crack Amount Commonly Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cocaine_Crack_Comment_Details__c</fullName>
        <label>Cocaine/Crack Comment/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cocaine_Crack_Date_of_Last_Use__c</fullName>
        <label>Cocaine/Crack Date of Last Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cocaine_Crack_Details__c</fullName>
        <label>Cocaine/Crack Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug of Choice</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cocaine_Crack_Duration__c</fullName>
        <label>Cocaine/Crack Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than a month</fullName>
                </value>
                <value>
                    <fullName>less than 3 months</fullName>
                </value>
                <value>
                    <fullName>less than 6 months</fullName>
                </value>
                <value>
                    <fullName>less than a year</fullName>
                </value>
                <value>
                    <fullName>more than a year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cocaine_Crack_How_Often__c</fullName>
        <label>Cocaine/Crack How Often</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>1x per week</fullName>
                </value>
                <value>
                    <fullName>2x per week</fullName>
                </value>
                <value>
                    <fullName>3x per week</fullName>
                </value>
                <value>
                    <fullName>4x per week</fullName>
                </value>
                <value>
                    <fullName>1x per month or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cocaine_Crack_Route__c</fullName>
        <label>Cocaine/Crack Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Nasal</fullName>
                </value>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_on_Wine_Usage__c</fullName>
        <label>Comments on Wine Usage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_with_Corona_Virus__c</fullName>
        <label>Contact with Corona Virus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_with_anyone_with_Covid19__c</fullName>
        <label>Contact with anyone with Covid19?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>